sandbox/output
SearchWorker.java:3: error: <identifier> expected
    public List<String> search(String) {
                                     ^
1 error
